# qwen3-27b-thor-runner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crash_log.txt
.github/: copilot-instructions.md  copilot-instructions.md.bak
configs/: 4b.conf  9b.conf  config.conf  engine.conf  longctx_test.conf  nvfp4.conf  serve.conf
docs/: API.md  BUILD_AND_IMPLEMENTATION.md  CACHE_REFACTOR_PLAN.md  CLI.md  DEBUG_LOG.md  OPTIMIZATION_LOG.md  OPTIMIZATION_ROADMAP.md  SAMPLING_OPTIMIZATION_PLAN.md
docs/archive/: CACHE_REFACTOR_PLAN.md  DELTANET_WY_CHUNKWISE_EVAL.md  FRAMEWORK_OPTIMIZATION_ANALYSIS.md  GDN_UMMA_SM110_DESIGN.md  NVFP4_SUPPORT_PLAN.md  PREFILL_OPTIMIZATION_PLAN.md
docs/references/: Jetson_Thor_SM110_Hardware_Guide.md
src/: benchmark.cpp  main.cpp  tests.cpp
src/engine/: allocator.cpp  allocator.h  backend.cpp  backend.h  block_tracker.h  cache_config.h  cache_engine.cpp  cache_engine.h  cache_entry.h  cache_kernels.cu  cache_kernels.h  cache_key.h  cache_manager.cpp  cache_manager.h  cache_monitor.h  cutlass_grouped_gemm_sm110.cuh  deltanet_chunkwise.cu  dense_gemm.h  dense_gemm_fp4.h  dense_gemm_fp4_sm110.cu  dense_gemm_sm110.cu  disk_backend.cpp  disk_backend.h  engine.cpp  engine.h  gdn_umma_sm110.cu  gdn_umma_sm110.h  grouped_gemm.h  kv_swapper.cpp  kv_swapper.h  layer.cu  layer.h  light_ops.cu  light_ops.h  model.cpp  model.h  moe_layer.cpp  moe_layer.h  moe_router.h  nvtx_utils.h  (+19 more)
src/serve/: serve.cpp  serve.h
src/tui/: tui.cpp  tui.h
